--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,6 @@
 {
-  "welcome": "How’s the sky looking today?"
+  "welcome": "How’s the sky looking today?",
+  "sectionTitle": {
+    "hourlyForecast": "Hourly Forecast"
+  }
 }
