feat(block): DailyForecast section

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,8 @@
 {
   "welcome": "How’s the sky looking today?",
   "sectionTitle": {
-    "hourlyForecast": "Hourly Forecast"
+    "hourlyForecast": "Hourly Forecast",
+    "dailyForecast": "Daily Forecast"
   },
   "weatherInfo": {
     "apparent_temperature": "Feels like",
