feat: add no search result ui

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,6 +23,7 @@
   "search": {
     "button": "Search",
     "inputPlaceholder": "Search for a place...",
-    "loading": "Search in progress..."
+    "loading": "Search in progress...",
+    "noResult": "No search result found!"
   }
 }
